--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pandas",
     "pydantic",
     "pyyaml",
-    "torch"
+    "torch",
+    "tqdm"
 ]
 
 [project.optional-dependencies]
